packages/survey-core/src/default-theme/blocks/sd-paneldynamic.scss
/* ... */
.sd-question--readonly,
.sd-question--preview {
    .sd-paneldynamic .sd-question__placeholder {
        color: $foreground;
    }
}
// .sd-paneldynamic__panel-wrapper {
//     box-sizing: border-box;
//     padding-bottom: calc(1 * var(--sd-base-padding));
// }

.sd-paneldynamic__panel-wrapper:after {
    display: table;
    clear: both;
    content: " ";
}

.sd-paneldynamic__separator {
    display: none;
}
.sd-paneldynamic__footer .sd-paneldynamic__separator,
.sd-paneldynamic__panel-wrapper--list ~ .sd-paneldynamic__panel-wrapper--list:before {
    content: " ";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: 0;
    border-color: $border-light;
    background: $border-light;
    height: 1px;
    border: none;
}
.sd-paneldynamic__separator:only-child {
    display: none;
}

.sd-paneldynamic__panel-wrapper--in-row.sd-paneldynamic__panel-wrapper--in-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: relative;

    &:before {
        top: 0;
        left: calc(-1 * var(--sd-base-padding));
        right: calc(-1 * var(--sd-base-padding));
    }
}

.sd-paneldynamic__buttons-container {
    display: flex;
    align-items: center;
    // padding: calc(var(--sd-base-vertical-padding) - var(--sjs2-spacing-x100)) 0;
}

.sd-paneldynamic__progress-text {
    font-size: $font-questiontitle-size;
    line-height: multiply(1.5, $font-questiontitle-size);
    color: $font-questiondescription-color;
    margin: 0;
    margin-right: calc(var(--sjs2-spacing-x150) + var(--sjs2-spacing-x025));
}

.sd-paneldynamic__placeholder {
    .sd-action-bar--empty {
        margin-top: var(--sjs2-spacing-negative-x050);
    }
}

.sd-question--empty.sd-question--paneldynamic {
    & > .sd-question__content {
        padding-bottom: var(--sd-base-padding);
        --animation-padding-bottom: var(--sd-base-padding);
    }
}

.sd-question--paneldynamic:not(.sd-question--empty) {
    & > .sd-question__content {
        & > .sd-question__comment-area {
            padding-bottom: var(--sd-base-padding);
        }
    }
}

.sd-paneldynamic__buttons-container .sd-action-bar {
    width: 100%;
    margin: 0 calc(var(--sjs2-spacing-negative-x150) + var(--sjs2-spacing-negative-x025));
    width: calc(100% + var(--sjs2-spacing-x600));
}

.sd-paneldynamic__panel-footer {
    border-top: none;
    position: relative;
    // top: calc(0.5 * var(--sd-base-vertical-padding));
    margin-right: calc(var(--sjs2-spacing-negative-x150) + var(--sjs2-spacing-negative-x025));
    justify-content: flex-end;

    .sd-action-bar--empty {
        display: none;
    }

    .sd-action-bar__item:not(.sd-action-bar__item--hidden) {
        margin-bottom: var(--sjs2-spacing-negative-x100);
    }
}

.sd-paneldynamic__tabs-container {
    padding-top: var(--sd-base-padding);
    .sd-tabs-toolbar {
        margin-bottom: -1px;
    }
    &:after {
        content: " ";
        display: block;
        height: 1px;
        position: relative;
        background: $border-light;
        bottom: 0;
        inset-inline-start: calc(-1 * var(--sd-base-padding));
        width: calc(100% + 2 * var(--sd-base-padding));
    }
}
.sd-paneldynamic__tabs-container--with-header {
    padding-top: var(--sjs2-spacing-x300);
}
.sd-tabs-toolbar.sd-action-bar {
    align-items: flex-start;
    z-index: 1;
    --sd-action-bar-gap: var(--sjs2-spacing-x400);
}

.sd-tabs-toolbar.sd-tabs-toolbar--left {
    justify-content: flex-start;
}

.sd-tabs-toolbar.sd-tabs-toolbar--right {
    justify-content: flex-end;
}

.sd-tabs-toolbar.sd-tabs-toolbar--center {
    justify-content: center;
}

.sd-tab-item {
    padding: var(--sjs2-spacing-x100) 0 var(--sjs2-spacing-x200);
    display: flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    display: flex;
    box-sizing: border-box;
    border: none;
    background-color: transparent;
    cursor: pointer;

    font-family: $font-family;
    font-size: $font-editorfont-size;
    line-height: multiply(1.5, $font-editorfont-size);
    color: $font-questiondescription-color;
    overflow-x: hidden;
    white-space: nowrap;
    box-shadow: inset 0px 0px 0px $primary;
    transition: box-shadow $transition-duration;

    &:hover,
    &:focus-visible {
        outline: none;
        box-shadow: inset 0px -2px 0px $primary;
    }
}

.sd-tab-item.sd-tab-item--active {
    color: $font-questiontitle-color;
    box-shadow: inset 0px -2px 0px $primary;
}

.sd-tab-item--icon {
    padding: var(--sjs2-spacing-x100);
    width: auto;
    border-radius: var(--sjs2-radius-component-action);

    use {
        fill: $foreground-light;
        opacity: 0.5;
    }
}

.sd-tab-item--icon:hover,
.sd-tab-item--icon.sd-tab-item--active {
    background-color: var(--sjs2-color-component-action-brand-tertiary-hovered-bg);
    box-shadow: none;

    use {
        fill: var(--sjs2-color-component-action-brand-tertiary-hovered-icon);
    }
}

.sd-tab-item--icon:hover {
    use {
        opacity: 1;
    }
}

.sd-tabs-toolbar .sv-dots {
    width: auto;
}

.sd-tabs-toolbar .sv-dots.sd-action-bar__item--hidden {
    width: 0;
}

.sd-tab-item__title {
    line-height: var(--sjs2-line-height-x300);
    height: var(--sjs2-size-x300);
    display: flex;
    align-items: center;
}

.sd-question__title ~ .sd-tabs-toolbar {
    margin-top: var(--sjs2-spacing-x300);
}
.sd-paneldynamic__header.sd-element__header.sd-paneldynamic__header-tab {
    padding-bottom: 0;
}

.sd-element--collapsed .sd-paneldynamic__header.sd-element__header.sd-paneldynamic__header-tab {
    padding-bottom: var(--sjs2-spacing-x200);
}

.sd-paneldynamic__header.sd-element__header.sd-paneldynamic__header-tab::after {
    content: none;
}

.sd-question--paneldynamic.sd-element--with-frame {
    padding: 0;
}
/* ... */

